Fixed naming of dao tests.